# frozen_string_literal: true

class StudentListStrategy
  private_class_method :new

  protected

  # Паблон шаттерн
  def str_to_list(str); end

  def list_to_str(list); end
end
